all zodiacs html

--- a/zodiacHTML/dog.html
+++ b/zodiacHTML/dog.html
@@ -100,27 +100,97 @@
         <h4 class="zodiac-name"><strong>Osobisty horoskop</strong></h4>
         <p class="zodiac-description">
           <strong
-            >Poszukiwacz wolności, pionier zmian, uosobienie odwagi i pasji
-          </strong>
+            >Obrońca serca, strażnik sprawiedliwości, uosobienie lojalności,
+            odwagi i milczącego oddania </strong
+          ><br />Pies nie błyszczy – ale świeci. Cicho, stale, niezachwianie. To
+          znak, który stoi przy Tobie, kiedy inni odchodzą. Który nie potrzebuje
+          fanfar, by być bohaterem. Jego obecność daje spokój – bo z nim czujesz
+          się bezpiecznie.<br />
+
+          Nie rzuca słów na wiatr, nie składa obietnic bez pokrycia. Dla Psa
+          najważniejsze to być – wiernie, uczciwie, całym sobą. Niewzruszony
+          wobec niesprawiedliwości, delikatny wobec bliskich. Gotów walczyć – i
+          gotów czekać.
         </p>
 
         <h4 class="zodiac-name"><strong>Charakter i osobowość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Pies to archetyp wierności – przenikliwy, oddany, wyczulony na fałsz.
+          Czuje więcej, niż mówi. Nie ufa od razu – ale jeśli już pokocha, to na
+          dobre i na złe. Jego świat opiera się na wartościach: lojalność,
+          prawość, ochrona tych, których kocha.<br />
 
-        <h4 class="zodiac-name"><strong>Tygrys i pieniądze</strong></h4>
-        <p class="zodiac-description"></p>
+          Bywa zbyt czujny, czasem nieufny – ale nie dlatego, że nie wierzy,
+          lecz dlatego, że zbyt głęboko dba. Nie znosi kłamstw, nie toleruje
+          manipulacji. W relacjach i działaniach – autentyczny do bólu.<br />
+
+          W jego oczach wszystko jest czarne albo białe – ale jego serce zna
+          wszystkie odcienie troski.<br />
+        </p>
+
+        <h4 class="zodiac-name"><strong>Pies i pieniądze</strong></h4>
+        <p class="zodiac-description">
+          Pieniądze są dla Psa narzędziem – nie celem. Pragnie stabilności, nie
+          bogactwa. Dba o bezpieczeństwo swoje i bliskich. Nie szasta, nie
+          ryzykuje. Woli mniej – ale pewnie.<br />
+
+          W pracy – sumienny, dokładny, niezawodny. Często wybiera ścieżki,
+          które pozwalają chronić innych, służyć sprawie, budować trwałe
+          fundamenty. Pieniądze są tylko środkiem – wartości zawsze stawia
+          wyżej.
+        </p>
 
         <h4 class="zodiac-name"><strong>Relacje i miłość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          W miłości – wierny, opiekuńczy, głęboko zaangażowany. Gdy kocha, to
+          bez zastrzeżeń. Chroni, wspiera, słucha. Ale i czuwa – czasem aż za
+          bardzo. Może być zazdrosny, nie dlatego, że nie ufa, ale dlatego, że
+          czuje zbyt intensywnie.<br />
 
-        <h4 class="zodiac-name"><strong>Mężczyzna Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+          Potrzebuje partnera, który doceni jego stałość, który nie zagra jego
+          emocjami. Bo Pies nie zapomina ran – nawet jeśli przebacza. Pragnie
+          relacji, w której może się rozluźnić, ufać, po prostu być sobą.
+        </p>
 
-        <h4 class="zodiac-name"><strong>Kobieta Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+        <h4 class="zodiac-name"><strong>Mężczyzna Pies</strong></h4>
+        <p class="zodiac-description">
+          Spokojny filar, cichy wojownik, który nigdy nie zawodzi. Nie szuka
+          rozgłosu – ale budzi szacunek. W relacjach – stały, lojalny,
+          emocjonalnie głęboki. Szuka partnerki, która zrozumie jego potrzebę
+          bezpieczeństwa, czułości i prostoty.<br />
+
+          W pracy – odpowiedzialny, rzetelny, oddany. Błyszczy w rolach, gdzie
+          liczy się służba, uczciwość i długofalowe zaangażowanie. Jego siła to
+          nie błysk – to wytrwałość.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Kobieta Pies</strong></h4>
+        <p class="zodiac-description">
+          Delikatna, ale nieugięta. Czuła, ale z wewnętrznym kręgosłupem z
+          żelaza. Łączy w sobie intuicję, troskę i niezachwiane poczucie
+          sprawiedliwości. Widzi to, czego inni nie zauważają – a kiedy milczy,
+          mówi najwięcej.<br />
+
+          W miłości – głęboka, oddana, wymagająca autentyczności. Nie toleruje
+          gier. Kocha na poważnie – i oczekuje wzajemności. Jest jak dom:
+          ciepła, bezpieczna, wierna – ale nie zniesie fałszu.<br />
+
+          W pracy – cicha siła zespołu. Rozkwita tam, gdzie może działać z
+          sercem, w zgodzie z wartościami. Dba o innych, ale nie zapomina o
+          sobie.
+        </p>
 
         <h4 class="zodiac-name"><strong>Podsumowanie</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Pies to wierność, która nie pyta, czy warto.<br />
+          To serce, które nie zdradza.<br />
+          To obecność, która nie potrzebuje słów – bo jej siłą jest trwanie.<br />
+
+          Jeśli szukasz duszy, która będzie stała przy Tobie, gdy cały świat się
+          chwieje – Pies już tam jest.<br />
+          Nie dla uznania. Nie dla korzyści.<br />
+          Dla Ciebie.
+        </p>
       </section>
     </div>
   </body>
