--- a/zodiacHTML/goat.html
+++ b/zodiacHTML/goat.html
@@ -107,27 +107,101 @@
         <h4 class="zodiac-name"><strong>Osobisty horoskop</strong></h4>
         <p class="zodiac-description">
           <strong
-            >Poszukiwacz wolności, pionier zmian, uosobienie odwagi i pasji
-          </strong>
+            >Strażniczka piękna, powierniczka emocji, uosobienie łagodnej siły i
+            duchowej subtelności </strong
+          ><br />Koza nie wchodzi z impetem – pojawia się jak zapach, jak
+          światło o zmierzchu. Delikatna, ale nie słaba. Cicha, ale nie
+          obojętna. To znak, który czuje więcej, widzi głębiej, żyje
+          intensywniej – choć nie zawsze na pokaz.<br />
+
+          Jej obecność koi. Jej świat to świat harmonii, sztuki i sensów, które
+          nie potrzebują słów. Koza nie walczy o przestrzeń – ona tworzy
+          przestrzeń, w której można być sobą. Zawsze trochę obok zgiełku, ale
+          nigdy bez znaczenia.
         </p>
 
         <h4 class="zodiac-name"><strong>Charakter i osobowość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Koza to archetyp empatii – wrażliwa, refleksyjna, pełna łagodnej
+          mądrości. Nie znosi brutalności ani szorstkości – reaguje ciszą, kiedy
+          inni krzyczą. Żyje w rytmie serca, nie zegara.<br />
 
-        <h4 class="zodiac-name"><strong>Tygrys i pieniądze</strong></h4>
-        <p class="zodiac-description"></p>
+          Bywa nieśmiała, ale potrafi stawiać granice. Choć często idzie z boku,
+          to jej intuicja prowadzi ją dokładnie tam, gdzie powinna być. W głębi
+          duszy skrywa siłę – nie krzykliwą, lecz trwałą, jak miękka trawa,
+          która zawsze się podnosi.<br />
+
+          Koza to istota marzeń – ale jej marzenia są konkretem. Buduje z
+          wyobraźni, z emocji, z delikatności, która nie ustępuje.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Koza i pieniądze</strong></h4>
+        <p class="zodiac-description">
+          Dla Kozy pieniądze to nie cel, lecz narzędzie. Pragnie bezpieczeństwa
+          – nie luksusu. Potrzebuje wolności – nie rywalizacji. Jeśli pracuje –
+          to z serca. Jeśli zarabia – inwestuje w piękno, spokój, sens.<br />
+          Bywa hojna, ale nie rozrzutna. Potrafi planować, choć czasem ucieka w
+          impulsy, gdy emocje biorą górę. Jej wyzwanie? Uwierzyć, że stabilność
+          może iść w parze z pasją.
+        </p>
 
         <h4 class="zodiac-name"><strong>Relacje i miłość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          W miłości Koza jest czuła, romantyczna, głęboka. Kocha nie
+          powierzchnię, lecz duszę. Czasem daje za dużo, zapominając o sobie.
+          Ale jeśli nie czuje wzajemności – odchodzi. Cicho. Z godnością. Bez
+          żalu – ale i bez powrotu.<br />
 
-        <h4 class="zodiac-name"><strong>Mężczyzna Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+          Potrzebuje relacji, która daje ciepło i swobodę. Partnera, który ją
+          widzi – nie tylko podziwia. Kogoś, kto będzie umiał słuchać – nie
+          tylko mówić. Kto zrozumie, że jej świat to przestrzeń emocji, a nie
+          chaos dramatów.
+        </p>
 
-        <h4 class="zodiac-name"><strong>Kobieta Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+        <h4 class="zodiac-name"><strong>Mężczyzna Koza</strong></h4>
+        <p class="zodiac-description">
+          Artysta duszy – wrażliwy, spokojny, pełen marzeń. Nie odnajduje się w
+          twardych strukturach – potrzebuje miękkich granic, w których może
+          oddychać. Unika konfrontacji, ale nie ucieka od prawdy.<br />
+
+          W miłości – szuka bliskości, zrozumienia, pokoju. Może wydawać się
+          nieuchwytny, bo nie znosi presji. Ale gdy czuje się bezpieczny –
+          rozkwita.<br />
+
+          W pracy – najlepiej działa tam, gdzie może tworzyć, inspirować,
+          uzdrawiać. Jego wyzwanie to nie talent – lecz odwaga, by go pokazać
+          światu.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Kobieta Koza</strong></h4>
+        <p class="zodiac-description">
+          Delikatna, ale niezłomna. Subtelna, ale pełna pasji. Jej siła leży w
+          emocjach – i w zdolności przekuwania ich w piękno. Często idzie pod
+          prąd świata, ale nie z buntu – z wewnętrznej potrzeby
+          autentyczności.<br />
+
+          W relacjach – oddana, lojalna, romantyczna. Pragnie związku, w którym
+          będzie mogła oddychać i być sobą. Nie znosi gier, nie toleruje fałszu.
+          Jeśli kocha – to prawdziwie. Ale tylko wtedy, gdy czuje się
+          szanowana.<br />
+
+          W pracy – błyszczy tam, gdzie trzeba czuć, tworzyć, opowiadać.
+          Potrzebuje wiary w siebie, by nie pozwolić wątpliwościom odbierać jej
+          głosu.
+        </p>
 
         <h4 class="zodiac-name"><strong>Podsumowanie</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Koza to łagodność, która przetrwa każdą burzę.<br />
+          To piękno, które rodzi się z prawdy.<br />
+          To głos serca, który słychać nawet w ciszy.<br />
+
+          Jeśli szukasz duszy, która widzi więcej, niż mówi – i serca, które
+          potrafi kochać mimo lęku – Koza poprowadzi Cię drogą nie siły, lecz
+          zrozumienia.<br />
+          Nie krzyczy, nie dominuje – ale pozostaje.<br />
+          I zostawia ślad – nie na ścianach, lecz w ludziach.
+        </p>
       </section>
     </div>
   </body>
