--- a/zodiacHTML/monkey.html
+++ b/zodiacHTML/monkey.html
@@ -113,27 +113,103 @@
         <h4 class="zodiac-name"><strong>Osobisty horoskop</strong></h4>
         <p class="zodiac-description">
           <strong
-            >Poszukiwacz wolności, pionier zmian, uosobienie odwagi i pasji
-          </strong>
+            >Mistrz iluzji, strateg gier i słów, uosobienie błyskotliwości,
+            humoru i nieuchwytnego geniuszu </strong
+          ><br />Małpa nie pyta, czy może – ona już działa. Nie prosi o uwagę –
+          zdobywa ją z wdziękiem. Tam, gdzie inni widzą chaos, ona widzi
+          układankę. Tam, gdzie inni jeszcze się zastanawiają – Małpa już zna
+          odpowiedź. To znak, który kocha zaskakiwać. Zwinna, przenikliwa,
+          wiecznie krok przed światem.<br />
+
+          Jej energia to połączenie umysłu i zabawy. Inteligencja owinięta w
+          żart. Logika schowana za uśmiechem. Gdy pojawia się Małpa – wszystko
+          zaczyna się poruszać szybciej.
         </p>
 
         <h4 class="zodiac-name"><strong>Charakter i osobowość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Małpa to archetyp sprytu i adaptacji. Wchodzi w każdą przestrzeń jak
+          do gry – szybko rozpoznaje zasady i zaraz tworzy własne. Lubi ludzi,
+          ale nie lubi schematów. Kocha dyskusje, wyzwania i sytuacje, w których
+          trzeba być o krok przed innymi.<br />
 
-        <h4 class="zodiac-name"><strong>Tygrys i pieniądze</strong></h4>
-        <p class="zodiac-description"></p>
+          Bywa lekceważona – do czasu. Bo pod jej żartem kryje się chłodna
+          analiza, a za figlarnością – nieprzeciętny intelekt. Małpa nie żyje
+          według zasad – ona je tworzy.<br />
+
+          Nie znosi nudy, ograniczeń, nadmiaru powagi. Jej żywiołem jest
+          zmienność, jej bronią – słowo.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Małpa i pieniądze</strong></h4>
+        <p class="zodiac-description">
+          Małpa potrafi robić pieniądze z pomysłu, którego nikt nie widzi. Jej
+          dar do wykrywania okazji i tworzenia rozwiązań tam, gdzie inni widzą
+          problem, czyni ją urodzoną negocjatorką i przedsiębiorczynią.<br />
+
+          Lubi szybkie efekty – może być niecierpliwa. Potrzebuje nauczyć się
+          cierpliwości, bo największe sukcesy przychodzą wtedy, gdy jej błysk
+          spotyka się z wytrwałością. Gdy inwestuje – to z rozmachem. Gdy
+          ryzykuje – to nie bez powodu.
+        </p>
 
         <h4 class="zodiac-name"><strong>Relacje i miłość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          W miłości Małpa to ogień – nie stały płomień, lecz iskry. Pociąga ją
+          tajemnica, gra, flirt. Uwodzi słowem, spojrzeniem, humorem. Nie
+          zatrzymuje się, dopóki nie poczuje, że naprawdę ktoś ją widzi – nie
+          tylko się nią zachwyca.<br />
 
-        <h4 class="zodiac-name"><strong>Mężczyzna Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+          Potrzebuje partnera, który nie boi się jej błyskotliwości, ale też nie
+          próbuje jej kontrolować. Jeśli poczuje się ograniczona – zniknie bez
+          ostrzeżenia. Jeśli pokocha – zrobi to z pasją, ale zawsze z
+          przestrzenią.<br />
 
-        <h4 class="zodiac-name"><strong>Kobieta Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+          Jej miłość to przygoda. Intensywna. Wciągająca. Niekiedy trudna – ale
+          nigdy nudna.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Mężczyzna Małpa</strong></h4>
+        <p class="zodiac-description">
+          Zawsze o krok przed innymi. Urodzony strateg, który błyszczy w
+          dyskusjach i wie, jak przejąć stery bez podnoszenia głosu.
+          Fascynujący, zwinny, nieprzewidywalny.<br />
+
+          W relacjach – czarujący, intrygujący, ale potrzebujący wolności. Musi
+          czuć, że może oddychać – inaczej ucieknie.<br />
+
+          W pracy – nie ma sobie równych tam, gdzie trzeba kombinować,
+          przekraczać granice i znajdować nieoczywiste wyjścia. Jego siłą jest
+          umysł – jego wyzwaniem: skupienie.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Kobieta Małpa</strong></h4>
+        <p class="zodiac-description">
+          Żywiołowa, inteligentna, uwodzicielska – nie z wyglądu, lecz z
+          obecności. Jej dowcip potrafi rozbroić, a jej refleksyjność –
+          zaskoczyć. Umie rozśmieszyć i przywrócić do pionu jednym zdaniem.<br />
+
+          W miłości – nie znosi banału. Potrzebuje partnera, który nie tylko ją
+          zrozumie, ale też nadąży. Lubi grę, ale nie znosi fałszu. Kocha z
+          błyskiem w oku – i czujnym sercem.<br />
+
+          W pracy – kreatywna, niezależna, doskonała w improwizacji. Jej
+          intuicja i spryt czynią ją mistrzynią w sztuce przetrwania – i
+          błyszczenia.
+        </p>
 
         <h4 class="zodiac-name"><strong>Podsumowanie</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Małpa to błysk – który czasem oślepia, ale zawsze prowadzi. To
+          zwinność umysłu, która przekształca trudność w szansę. To radość,
+          która nie szuka poklasku – lecz przestrzeni, w której może się
+          wyrazić.<br />
+
+          Jeśli szukasz kogoś, kto rozbudzi Twój umysł i zburzy nudę – Małpa
+          poprowadzi Cię nie tam, gdzie jest bezpiecznie, ale tam, gdzie
+          naprawdę się dzieje.<br />
+          Bo jej życie to scena – a ona zna wszystkie kulisy.
+        </p>
       </section>
     </div>
   </body>
