--- a/zodiacHTML/pig.html
+++ b/zodiacHTML/pig.html
@@ -112,27 +112,96 @@
         <h4 class="zodiac-name"><strong>Osobisty horoskop</strong></h4>
         <p class="zodiac-description">
           <strong
-            >Poszukiwacz wolności, pionier zmian, uosobienie odwagi i pasji
-          </strong>
+            >Strażniczka zmysłów, serca i ciszy – uosobienie dobroci,
+            przyjemności i subtelnej siły </strong
+          ><br />Świnia nie pędzi – ona płynie. Przez zapachy, smaki, dźwięki i
+          dotyk. Zawsze obecna – w chwili, w emocji, w pięknie, które inni
+          przeoczają. To znak, który żyje całą sobą – ale nigdy na pokaz.<br />
+
+          Jej serce jest miękkie, ale niezłomne. Jej spokój – wyraz dojrzałości,
+          nie słabości. W świecie, który ciągle czegoś chce, Świnia daje –
+          uwagę, ciepło, akceptację. Ale tylko tym, którzy nie ranią.
         </p>
 
         <h4 class="zodiac-name"><strong>Charakter i osobowość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Świnia to symbol przyjemności i czułości. Ceni wszystko, co prawdziwe:
+          smak jedzenia, zapach deszczu, muzykę o świcie. Ma duszę estety – ale
+          też serce opiekunki. Delikatna i wrażliwa, ale gdy poczuje, że ktoś
+          przekroczył granicę – potrafi się wycofać. Bez krzyku. Z klasą.<br />
 
-        <h4 class="zodiac-name"><strong>Tygrys i pieniądze</strong></h4>
-        <p class="zodiac-description"></p>
+          Nie lubi sporów, unika dramatów. Woli milczeć niż ranić. Woli odejść
+          niż udawać. Ale kiedy kocha – robi to całym sobą. I nigdy połowicznie.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Świnia i pieniądze</strong></h4>
+        <p class="zodiac-description">
+          Dla Świni finanse to nie kwestia prestiżu, lecz jakości życia. Lubi
+          wygodę, piękno, harmonię – ale nie trwoni bez sensu. Szuka
+          bezpieczeństwa, nie statusu. Potrafi dzielić się hojnie, gdy widzi
+          sens.<br />
+
+          W pracy – cierpliwa, dokładna, często utalentowana artystycznie.
+          Dobrze odnajduje się w zawodach związanych z opieką, sztuką, naturą,
+          kuchnią, estetyką. Unika chaosu, ceni spokój i wyczucie rytmu.
+        </p>
 
         <h4 class="zodiac-name"><strong>Relacje i miłość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          W miłości – miękka jak aksamit, głęboka jak cisza po deszczu. Świnia
+          nie szuka przygody, lecz prawdziwego połączenia. Marzy o relacji, w
+          której można być sobą – nie perfekcyjnym, ale prawdziwym.<br />
 
-        <h4 class="zodiac-name"><strong>Mężczyzna Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+          Bywa idealistką. Czasem za bardzo wierzy, że każdy jest dobry. Ale
+          jeśli zawiedziesz – nie będzie awantury. Będzie cisza. I dystans,
+          którego nie sposób już skrócić.<br />
 
-        <h4 class="zodiac-name"><strong>Kobieta Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+          Kocha spokojnie, cierpliwie, całym sercem. Potrzebuje dotyku,
+          bezpieczeństwa i codziennych drobnych gestów. Nie błyszczy – ale
+          rozświetla.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Mężczyzna Świnia</strong></h4>
+        <p class="zodiac-description">
+          Esteta i romantyk. Spokojny, czuły, wierny. Ma w sobie miękkość słów i
+          głębię spojrzenia. Nie krzyczy, ale mówi z serca. W miłości –
+          troskliwy i lojalny. Czasem naiwny, bo wierzy, że ludzie są lepsi, niż
+          bywają.<br />
+
+          W pracy – rzetelny, kreatywny, subtelny. Rozkwita w dziedzinach, gdzie
+          liczy się detal, empatia i smak – w sztuce, kuchni, rękodziele. Nigdy
+          nie dla rozgłosu – zawsze z duszy.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Kobieta Świnia</strong></h4>
+        <p class="zodiac-description">
+          Zmysłowa, cicha siła. Ma w sobie kobiecość, która nie potrzebuje słów
+          – w spojrzeniu, w dłoniach, w obecności. Empatyczna, głęboko
+          odczuwająca, pełna łagodności. Potrafi być oparciem – nawet gdy sama
+          potrzebuje wsparcia.<br />
+
+          W relacjach – oddana, wierna, wrażliwa. Szuka bliskości, której można
+          ufać. Nie potrzebuje fajerwerków – wystarczy szczerość. Ale nie
+          zniesie chłodu, nieobecności, obojętności.<br />
+
+          W pracy – perfekcjonistka. Ceni harmonię, estetykę, rytm. Najlepiej
+          czuje się w miejscach, gdzie serce idzie przed strategią, a detal ma
+          znaczenie.
+        </p>
 
         <h4 class="zodiac-name"><strong>Podsumowanie</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Świnia to zmysły uważne jak medytacja.<br />
+          To uczucie bezpieczeństwa bez słów.<br />
+          To gest troski – zanim poprosisz.<br />
+
+          Jeśli szukasz duszy, która w prostocie znajdzie magię,<br />
+          która poda rękę bez warunków<br />
+          i zostanie – nawet gdy zgasną światła –<br />
+          Świnia już czeka.<br />
+          Nie po to, by zdobywać.<br />
+          Po to, by być. Prawdziwie.
+        </p>
       </section>
     </div>
   </body>
