--- a/zodiacHTML/rooster.html
+++ b/zodiacHTML/rooster.html
@@ -117,27 +117,97 @@
         <h4 class="zodiac-name"><strong>Osobisty horoskop</strong></h4>
         <p class="zodiac-description">
           <strong
-            >Poszukiwacz wolności, pionier zmian, uosobienie odwagi i pasji
-          </strong>
+            >Strażnik ładu, głos prawdy, uosobienie precyzji, lojalności i
+            wewnętrznego kodeksu </strong
+          ><br />Kogut nie przemawia szeptem – on mówi tak, by było słychać. To
+          znak, który nie boi się zająć miejsca. Stoi prosto, patrzy w oczy i
+          nie szuka aprobaty – szuka prawdy. Jego obecność porządkuje
+          przestrzeń, jego słowa mają wagę, jego zasady – granice
+          nieprzekraczalne.<br />
+
+          Z pozoru surowy, w głębi serca niesie lojalność, oddanie i gotowość do
+          obrony tego, co dla niego ważne. Nie znosi kłamstwa, nie cierpi
+          chaosu. Kogut nie krąży – idzie prosto do sedna.
         </p>
 
         <h4 class="zodiac-name"><strong>Charakter i osobowość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Kogut to archetyp przenikliwości – bystry, czujny, skrupulatny. Widzi
+          więcej, niż mówi. Pilnuje szczegółu, ceni perfekcję, nie toleruje
+          niedbałości. Jest jak mistrz ceremonii – każdy gest, każde słowo ma
+          swoje miejsce.<br />
 
-        <h4 class="zodiac-name"><strong>Tygrys i pieniądze</strong></h4>
-        <p class="zodiac-description"></p>
+          Czasem bywa zbyt bezpośredni – jego prawda może ranić. Ale nie wynika
+          z pychy, lecz z uczciwości. Kogut nie potrafi udawać – jest taki, jaki
+          jest. Wierny swoim wartościom, niezłomny wobec niesprawiedliwości.<br />
+
+          Pod tą twardością kryje się wrażliwość – niechętnie pokazywana, ale
+          głęboko obecna.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Kogut i pieniądze</strong></h4>
+        <p class="zodiac-description">
+          Finanse traktuje jak strukturę – porządek, bezpieczeństwo, stabilność.
+          Lubi mieć kontrolę nad wydatkami i dokładnie wie, gdzie trafia każdy
+          grosz. Nie działa impulsywnie – planuje, analizuje, przewiduje.<br />
+
+          Ma zmysł organizacyjny, często sukcesy osiąga w zarządzaniu,
+          finansach, logistyce. Dla Koguta ważniejszy od błysku jest fundament.
+          Zbuduje majątek nie dla efektu – ale dla wolności, która daje mu
+          godność.
+        </p>
 
         <h4 class="zodiac-name"><strong>Relacje i miłość</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          W miłości – oddany, lojalny, konkretny. Kocha na serio. Gdy się
+          angażuje, to z całą odpowiedzialnością. Chroni, troszczy się, wspiera
+          – ale wymaga tego samego.<br />
+          Nie cierpi zdrady, nie toleruje gier. Potrzebuje partnera, który
+          rozumie jego wewnętrzny rygor, ale też potrafi go zmiękczyć. Bo choć
+          Kogut rzadko to okazuje – jego serce tęskni za czułością. Gdy czuje
+          się bezpieczny, staje się troskliwy i ciepły – w sposób, którego nikt
+          by się nie spodziewał.
+        </p>
 
-        <h4 class="zodiac-name"><strong>Mężczyzna Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+        <h4 class="zodiac-name"><strong>Mężczyzna Kogut</strong></h4>
+        <p class="zodiac-description">
+          Perfekcjonista, który mierzy wysoko i nie znosi bylejakości. Ceni
+          szacunek i uznanie. Lubi być doceniany – ale na własnych zasadach. W
+          relacjach – wymagający, wierny, konsekwentny.<br />
 
-        <h4 class="zodiac-name"><strong>Kobieta Tygrys</strong></h4>
-        <p class="zodiac-description"></p>
+          Szuka partnerki, która dorówna mu intelektualnie i emocjonalnie.
+          Niełatwo zdobyć jego serce, ale jeśli już – jest nie do zastąpienia. W
+          pracy – analityczny, uporządkowany, błyszczy tam, gdzie trzeba
+          planować, wdrażać i dopilnować detali.
+        </p>
+
+        <h4 class="zodiac-name"><strong>Kobieta Kogut</strong></h4>
+        <p class="zodiac-description">
+          Dumna, zorganizowana, silna. Łączy elegancję z dyscypliną, delikatność
+          z charakterem. W świecie chaosu – ona wprowadza strukturę. Zawsze wie,
+          co chce osiągnąć – i jak to zrobić.<br />
+
+          W miłości – lojalna, konkretna, wymagająca. Szuka partnera, który
+          doceni jej siłę, ale nie przestraszy się jej standardów. Jeśli
+          poczuje, że może zaufać – staje się czuła, uważna, opiekuńcza. Jej
+          oddanie jest głębokie – ale nie dla każdego.<br />
+
+          W pracy – wybitna w zarządzaniu, organizacji, analizie. Jej sukces to
+          efekt wytrwałości, nie przypadku.
+        </p>
 
         <h4 class="zodiac-name"><strong>Podsumowanie</strong></h4>
-        <p class="zodiac-description"></p>
+        <p class="zodiac-description">
+          Kogut to porządek w świecie pełnym chaosu.<br />
+          To prawda, która nie potrzebuje ozdób.<br />
+          To serce, które kocha bez kompromisów – i lojalność, która nie zna
+          warunków.<br />
+
+          Jeśli szukasz siły, która nie krzyczy, ale prowadzi – Kogut pokaże Ci,
+          jak żyć w zgodzie z wartościami.<br />
+          Nie dla poklasku. Nie dla efektu.<br />
+          Dla prawdy.
+        </p>
       </section>
     </div>
   </body>
