changed all images to webp

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
           </div>
           <div class="img-Fengshui">
-            <img src="./images/fengShui.jpg" alt="kompas chiński" />
+            <img src="./images/fengShui.webp" alt="kompas chiński" />
           </div>
         </div>
       </section>
@@ -87,14 +87,14 @@
           </p>
           <div class="bottom">
             <p class="text-bottom">white</p>
-            <img src="./images/logo-transparent.png" class="logoAboutUs" />
+            <img src="./images/logo-transparent.webp" class="logoAboutUs" />
             <p class="text-bottom">lotus</p>
           </div>
         </div>
         <div class="img-aboutUsWrapper">
           <div class="img-aboutUs">
             <img
-              src="./images/aboutUs-flower.png"
+              src="./images/aboutUs-flower.webp"
               alt="kwiat lotosu"
               class="lotus-aboutUs"
             />
@@ -126,7 +126,7 @@
               aria-label="Instagram"
             >
               <img
-                src="./images/instagram-icon.jpg"
+                src="./images/instagram-icon.webp"
                 alt="Instagram Icon"
                 class="social-icon"
               />
@@ -137,7 +137,7 @@
               aria-label="Facebook"
             >
               <img
-                src="./images/facebook-icon.png"
+                src="./images/facebook-icon.webp"
                 alt="Facebook Icon"
                 class="social-icon"
               />
