--- a/zodiac.html
+++ b/zodiac.html
@@ -26,51 +26,51 @@
     <div class="main-content">
       <div class="zodiac-grid">
         <a href="zodiacHTML/rat.html" class="zodiac-item">
-          <img src="images/zodiacs/rat-logo.png" alt="Szczur" />
+          <img src="images/zodiacs/rat-logo.webp" alt="Szczur" />
           <span>Szczur</span>
         </a>
         <a href="zodiacHTML/ox.html" class="zodiac-item">
-          <img src="images/zodiacs/ox-logo.png" alt="Bawół" />
+          <img src="images/zodiacs/ox-logo.webp" alt="Bawół" />
           <span>Bawół</span>
         </a>
         <a href="zodiacHTML/tiger.html" class="zodiac-item">
-          <img src="images/zodiacs/tiger-logo.png" alt="Tygrys" />
+          <img src="images/zodiacs/tiger-logo.webp" alt="Tygrys" />
           <span>Tygrys</span></a
         >
         <a href="zodiacHTML/dog.html" class="zodiac-item">
-          <img src="images/zodiacs/dog-logo.png" alt="Pies" />
+          <img src="images/zodiacs/dog-logo.webp" alt="Pies" />
           <span>Pies</span>
         </a>
         <a href="zodiacHTML/dragon.html" class="zodiac-item">
-          <img src="images/zodiacs/dragon-logo.png" alt="Smok" />
+          <img src="images/zodiacs/dragon-logo.webp" alt="Smok" />
           <span>Smok</span>
         </a>
         <a href="zodiacHTML/goat.html" class="zodiac-item">
-          <img src="images/zodiacs/goat-logo.png" alt="Koza" />
+          <img src="images/zodiacs/goat-logo.webp" alt="Koza" />
           <span>Koza</span>
         </a>
         <a href="zodiacHTML/monkey.html" class="zodiac-item">
-          <img src="images/zodiacs/mokey-logo.png" alt="Małpa" />
+          <img src="images/zodiacs/mokey-logo.webp" alt="Małpa" />
           <span>Małpa</span>
         </a>
         <a href="zodiacHTML/pig.html" class="zodiac-item">
-          <img src="images/zodiacs/pig-logo.png" alt="Świnia" />
+          <img src="images/zodiacs/pig-logo.webp" alt="Świnia" />
           <span>Świnia</span>
         </a>
         <a href="zodiacHTML/rabbit.html" class="zodiac-item">
-          <img src="images/zodiacs/rabbit-logo.png" alt="Królik" />
+          <img src="images/zodiacs/rabbit-logo.webp" alt="Królik" />
           <span>Królik</span>
         </a>
         <a href="zodiacHTML/rooster.html" class="zodiac-item">
-          <img src="images/zodiacs/rooster-logo.png" alt="Kogut" />
+          <img src="images/zodiacs/rooster-logo.webp" alt="Kogut" />
           <span>Kogut</span>
         </a>
         <a href="zodiacHTML/snake.html" class="zodiac-item">
-          <img src="images/zodiacs/snake-logo.png" alt="Wąż" />
+          <img src="images/zodiacs/snake-logo.webp" alt="Wąż" />
           <span>Wąż</span>
         </a>
         <a href="zodiacHTML/horse.html" class="zodiac-item">
-          <img src="images/zodiacs/horse-logo.png" alt="Koń" />
+          <img src="images/zodiacs/horse-logo.webp" alt="Koń" />
           <span>Koń</span>
         </a>
       </div>
